# django52-prefetch-related

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt  tox.ini
myproject/: settings.py
myproject/tenant/: apps.py  models.py  tests.py
myproject/tenant/migrations/: 0001_initial.py
