[project]
dependencies = [
    "django==5.2.1",
    "pytest==8.3.5",
    "tox==4.26.0",
]
description = "MRE to show problems with my usage of Prefetch()"
name = "myproject"
requires-python = "~=3.12.0"
version = "0.1"

[tool.ruff]
line-length = 119

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.lint.pycodestyle]
max-doc-length = 79
